# education_platform

./: .env_example  .gitignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
api_examples/: enroll_all.py
chat/: consumers.py  urls.py  views.py
config/nginx/: Dockerfile  conf.d  default.conf.template  nginx.conf
config/uwsgi/: uwsgi.ini
courses/: admin.py  fields.py  forms.py  middleware.py  mixins.py  urls.py  views.py
courses/api/: permissions.py  serializers.py  urls.py
courses/fixtures/: subjects.json
courses/migrations/: 0001_initial.py  0002_video_text_module_image_file_content.py  0003_alter_content_options_alter_module_options_and_more.py  0004_course_students.py  0005_alter_course_overview.py
courses/models/: abstract_models.py  main_models.py  other_models.py
education_platform/: asgi.py  urls.py  wsgi.py
education_platform/settings/: base.py  local.py  prod.py
static/css/: base.css
students/: forms.py  urls.py  views.py
students/management/commands/: enroll_reminder.py
templates/: base.html
templates/chat/: room.html
templates/course/: detail.html  list.html
templates/courses/content/: image.html
templates/manage/course/: list.html
templates/manage/module/: content_list.html
templates/students/course/: detail.html  list.html
